--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,7 @@ code {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  background-image: url("./back.jpg");
+  background-image: url("./back.jpg");  
+  overflow-y: scroll;
 }
 
